#893456 by omerida: Change FAPI definition of panel node "body" field to be more consistent with other node body fields.
#812658 by naxoc: Caching should take language into account.
#890086: Possible crash in flexible layout by not having CTools export.inc loaded.
#899456 by yareckon: IPE customize button needs to be reset to "static" instead of "normal".

Panels 6.x-3.7 (2010-Jul-26)
==============
Experimentally introduced the In-Place Editor (IPE).
Updated Panels Stylizer to use CTools' new Export UI.
Deprecated panels_get_panels() function. This will be eventually disappear. Use panels_get_regions() instead.
#834084: Reusable flexible layout introduced. Admin UI at admin/build/panels/layouts.
Clean up flexible. Attempt to reduce the use of unnecessary divs. 
Add more ability to control flexible classes.
Add ability to fix flexible canvas to a set width.
Allow disabling of scaling for IE6 in flexible.
Fixes to IPE:
  Add pane would add the new pane outside region styling
  Add pane would not appear in empty regions
  Panes could not be dragged to empty regions
  Save would lose content if they were inside stylizer styled regions
#822234 by Amitaibu: Missing url() caused IPE to not work on sites not using top level URLs.
#844062: Turned the normal drag and drop editor into a renderer plugin, made the IPE part of it. Also some fairly serious code reorganization.
Improve the renderer selection framework. This framework has no UI, but it utilizes exportables and new choices can be hand crafted.
Improve the IPE to use the proper cache if it is set, and to respect locking.
#847784: IPE displayed "Edit" link when no such link should have existed.
#843758: Legacy renderer caused "missing argument" warning when rendering.
Made it possible to override jQuery UI sortable options via settings in the renderer plugin.
Moved Panels stylizer to CTools. You must update CTools at the same time as Panels.
#737602: Generic NOT checkbox for all access tests.